:lipstick: prevent wordwrap and cut-off characters

--- a/src/components/QTList/QTList.scss
+++ b/src/components/QTList/QTList.scss
@@ -34,12 +34,19 @@
   bottom: 0; left: 0;
 }
 
+.name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .path {
   margin-top: 3px;
   font-size: 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
   opacity: 0.5;
+  line-height: 1.1;
 }
 
 .descendable-indicator {
